--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,21 @@ email.from=no-reply@ecommerce.com
 # General configuration
 app.frontend.url=http://localhost:8081
 
-# SMTP configuration
-spring.mail.host=localhost
-spring.mail.port=2500
+# Local Fake SMTP configuration
+#spring.mail.host=localhost
+#spring.mail.port=2500
+
+# Gmail SMTP configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=balajimalshetwar55@gmail.com
+spring.mail.password=qale jerj dxqf guvl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.port=8081
+
+#Twilio OTP Manager Properties
+twilio.account_sid=AC148dcde3c794ec77ac47352d71e6fb10
+twilio.auth_token=e5fb132eca56e8694e94630f902036cc
+twilio.trial_number=+18504241965
