Adding Facebook Social Login under ecommerce social login. Also, added exception for Illegal Arguments and handled in controller advice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ twilio.account_sid=AC148dcde3c794ec77ac47352d71e6fb10
 twilio.auth_token=d36ce0b75fde0a95c5901310951ecd30
 twilio.trial_number=+18504241965
 
-Spring security OAuth 2.0 Client setup to access Google Albums with Authorization code flow
+#Spring security OAuth 2.0 Client setup to access Google App with Authorization code flow
 spring.security.oauth2.client.registration.google.client-name=ecommerce 24112023
 spring.security.oauth2.client.registration.google.client-id=830339760544-ciojkee2bc0g4c0lk8r1r513r1dnbfdc.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
@@ -50,3 +50,16 @@ spring.security.oauth2.client.registration.google.authorization-grant-type=autho
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8082/login/oauth2/code/google
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+
+#Spring security OAuth 2.0 Client setup to access Facebook App with Authorization code flow
+spring.security.oauth2.client.registration.facebook.client-name=ecommerce 28112023
+spring.security.oauth2.client.registration.facebook.client-id=366101749211173
+spring.security.oauth2.client.registration.facebook.client-secret=8885834671f187560b82e2c0f5244b76
+spring.security.oauth2.client.registration.facebook.scope=public_profile,email
+spring.security.oauth2.client.registration.facebook.redirect-uri=http://localhost:8082/login/oauth2/code/facebook
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me
+spring.security.oauth2.client.provider.facebook.access-token-uri=https://graph.facebook.com/oauth/access_token
+spring.security.oauth2.client.provider.facebook.auth-uri : https://www.facebook.com/dialog/oauth
+spring.security.oauth2.client.provider.facebook.token-name=oauth_token
+spring.security.oauth2.client.provider.facebook.authentication-scheme=query
+spring.security.oauth2.client.provider.facebook.client-authentication-scheme=form
