--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Logging pattern for the console
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%X{correlationId}] - %msg%n
+
 # To let IntelliJ view endpoints through actuator.
 management.endpoints.jmx.exposure.include=*
 
